# cheddar-bench

./: .gitignore  AGENTS.md  LICENSE  README.md  REPORT.md  pyproject.toml
audit_scripts/: backfill_gemini_reviews.py
prompts/: extract-manifest.system.md  extract-manifest.user.md  inject-bugs.md  match-all-bugs-report.system.md  match-all-bugs-report.user.md  review-bugs.md
repos/: repos.json
repos/color/.github/workflows/: go.yml
repos/ms/: package.json
repos/ms/.github/workflows/: release.yml  test.yml
repos/nanoid/: bugs.json  index.browser.js  index.js
repos/nanoid/non-secure/: index.js
repos/slugify/: test.js
repos/smallvec/: Cargo.toml
repos/smallvec/.github/workflows/: main.yml
repos/smallvec/benches/: bench.rs
repos/smallvec/fuzz/fuzz_targets/: smallvec_ops.rs
repos/smallvec/src/: lib.rs  tests.rs
repos/uuid/benches/: v4.rs  v7.rs
repos/uuid/examples/: Cargo.toml
repos/uuid/examples/src/: uuid_macro.rs
repos/uuid/rng/: Cargo.toml
repos/uuid/tests/: macros.rs
repos/uuid/tests/smoke-test/: Cargo.toml
repos/uuid/tests/ui/compile_fail/: invalid_parse.stderr
repos/uuid/tests/wasm32-getrandom-test/: Cargo.toml
repos/xxHash/: Makefile
src/cheddar/: __init__.py  cli.py  errors.py  extractor.py  findings.py  llm.py  matcher.py  models.py  prompts.py  sandbox.py
src/cheddar/agents/: __init__.py  base.py  claude.py  codex.py  config.py  gemini.py
tests/: __init__.py  conftest.py  test_agents.py  test_cli.py  test_extractor.py  test_findings.py  test_llm.py  test_matcher.py  test_models.py  test_prompts.py  test_sandbox.py
